@@ -1,5 +1,8 @@
 package souther.compiler;
 
+import souther.compiler.types.TypeKey;
+import souther.compiler.types.TypeSymbols;
+import souther.compiler.types.TypeSymbol;
 import org.junit.jupiter.api.Test;
 
 import java.lang.classfile.ClassFile;
@@ -41,7 +44,7 @@ class CompileCrossModuleUnionTest {
         Map<String, byte[]> classes = Compiler.compileModules(List.of(INVENTORY));
         BytesClassLoader loader = new BytesClassLoader(classes, getClass().getClassLoader());
         Class<?> shortage = loader.loadClass("inv.Shortage");
-        assertEquals(List.of(loader.loadClass("inv.AllocateResult")),
+        assertEquals(List.of(loader.loadClass(Emitted.result("inv", "allocate"))),
                 Arrays.asList(shortage.getInterfaces()),
                 "a case class implements the unions of its own module and no others");
     }
@@ -63,14 +66,14 @@ class CompileCrossModuleUnionTest {
                 """;
         Map<String, byte[]> classes = Compiler.compileModules(List.of(inventory, shipping));
         BytesClassLoader loader = new BytesClassLoader(classes, getClass().getClassLoader());
-        assertEquals(List.of(loader.loadClass("ship.Shipped"), loader.loadClass("ship.ShortageCase")),
-                Arrays.asList(loader.loadClass("ship.AllocateAndShipResult").getPermittedSubclasses()));
+        assertEquals(List.of(loader.loadClass("ship.Shipped"), loader.loadClass(Emitted.bridgeCase("ship", TypeSymbols.declared(new TypeKey("inv", "Shortage"))))),
+                Arrays.asList(loader.loadClass(Emitted.result("ship", "allocateAndShip")).getPermittedSubclasses()));
 
         Object composed = loader.loadClass("ship.AllocateAndShip").getMethod("of").invoke(null);
         assertEquals("ship.Shipped",
                 Codecs.apply(composed, Codecs.decoded(loader, "inv.Sku", "SKU-1")).getClass().getName());
         Object departed = Codecs.apply(composed, Codecs.decoded(loader, "inv.Sku", ""));
-        assertEquals("ship.ShortageCase", departed.getClass().getName());
+        assertEquals(Emitted.bridgeCase("ship", TypeSymbols.declared(new TypeKey("inv", "Shortage"))), departed.getClass().getName());
         assertEquals("inv.Shortage",
                 departed.getClass().getMethod("value").invoke(departed).getClass().getName(),
                 "the bridge case holds the imported value as it is");
@@ -142,7 +145,7 @@ class CompileCrossModuleUnionTest {
                 """;
         Map<String, byte[]> classes = Compiler.compileModules(List.of(INVENTORY, shipping));
         BytesClassLoader loader = new BytesClassLoader(classes, getClass().getClassLoader());
-        Class<?> union = loader.loadClass("ship.ShipResult");
+        Class<?> union = loader.loadClass(Emitted.result("ship", "ship"));
         assertEquals(List.of(loader.loadClass("ship.NotShipped"), loader.loadClass("ship.Shipped")),
                 Arrays.asList(union.getPermittedSubclasses()),
                 "the union is this module's cases, and each of them implements it");
@@ -169,7 +172,7 @@ class CompileCrossModuleUnionTest {
                     constructs Label
                 behavior instruct : (a: Allocated) -> Shipped | NoLabel
                     depends on printLabel
-                    constructs Shipped, NoLabel
+                    constructs Shipped
                 let instruct (a, printLabel) =
                     if String.length(a.sku.value) > 0
                     then Shipped { sku = a.sku, label = printLabel(a.sku) }
@@ -184,7 +187,7 @@ class CompileCrossModuleUnionTest {
                 """;
         Map<String, byte[]> classes = Compiler.compileModules(List.of(inventory, shipping));
         BytesClassLoader loader = new BytesClassLoader(classes, getClass().getClassLoader());
-        Class<?> union = loader.loadClass("ship.AllocateAndShipResult");
+        Class<?> union = loader.loadClass(Emitted.result("ship", "allocateAndShip"));
         assertEquals(List.of(loader.loadClass("ship.NoLabel"), loader.loadClass("ship.NotAllocated"),
                         loader.loadClass("ship.Shipped")),
                 Arrays.asList(union.getPermittedSubclasses()),
@@ -226,7 +229,7 @@ class CompileCrossModuleUnionTest {
                 data Token = { v: String }
                 data NoToken
                 behavior mint : () -> Token | NoToken
-                    constructs Token, NoToken
+                    constructs Token
                 """;
         String stamping = """
                 module down exposing ( Stamped, Unstamped, stamp )
@@ -235,7 +238,7 @@ class CompileCrossModuleUnionTest {
                 data Unstamped
                 behavior stamp : (n: Int) -> Stamped | Unstamped
                     depends on mint
-                    constructs Stamped, Unstamped
+                    constructs Stamped
                 let stamp (n, mint) =
                     match mint() with
                     | Token as t -> Stamped { v = t.v }
@@ -245,8 +248,8 @@ class CompileCrossModuleUnionTest {
         // The call is not run here: `up.Mint` is an abstract class with a protected constructor, so a
         // stand-in cannot be made by reflection alone. What the bug produced was a descriptor naming a
         // class nothing emits, which is what is checked — the call linked to `down.MintResult` before.
-        assertEquals("()Lup/MintResult;", calleeDescriptor(classes.get("down.Stamp$Impl"), "up/Mint"));
-        assertTrue(classes.containsKey("up.MintResult"), "and that class is one this compilation wrote");
+        assertEquals("()Lup/MintResult;", calleeDescriptor(classes.get(Emitted.impl("down", "stamp")), "up/Mint"));
+        assertTrue(classes.containsKey(Emitted.result("up", "mint")), "and that class is one this compilation wrote");
     }
 
     /** The descriptor {@code $Impl} calls {@code apply} with on {@code owner}, read off the bytes. */
@@ -293,7 +296,7 @@ class CompileCrossModuleUnionTest {
                 """;
         Map<String, byte[]> classes = Compiler.compileModules(List.of(inventory, shipping));
         BytesClassLoader loader = new BytesClassLoader(classes, getClass().getClassLoader());
-        Object behavior = loader.loadClass("ship.Ship$Impl").getConstructor().newInstance();
+        Object behavior = Emitted.behavior(loader, "ship", "ship").getConstructor().newInstance();
         Object sku = Codecs.decoded(loader, "inv.Sku", "SKU-1");
         assertEquals("ship.Shipped", applyTwo(behavior, sku, 3L).getClass().getName(),
                 "the call links because the union it names is inv's");
