@@ -1,5 +1,7 @@
 package souther.compiler;
 
+import souther.compiler.source.SourceId;
+
 import souther.compiler.diag.CompileException;
 import souther.compiler.diag.Located;
 import souther.compiler.examples.Deadline;
@@ -69,7 +71,7 @@ class WhatComesBackFromAnEvaluationIsClassifiedWhereItArrivesTest {
         Compilation compilation = Compilation.ofSource(COMES_BACK, "Main");
         compilation.withDeadline(deadline);
         compilation.answerEverything();
-        String sourceId = compilation.exampleSourcesOf("example.arrives").get(0);
+        SourceId sourceId = compilation.exampleSourcesOf("example.arrives").getFirst();
         List<RowOutcome> rows = compilation.db()
                 .ask(new Output.Examples("example.arrives", sourceId, Output.CoverageMode.NONE))
                 .value().rows();
